source/components/moneys/moneys.module.scss
@import "../../scss/mixins";
@import "../../scss/vars";

.moneys {
  display: flex;
}

.graph {
  flex-grow: 0;
}

.text {
  text-align: right;
  margin-bottom: 40px;
  user-select: none;

  h1 {
    @include font-size-lg;
    font-weight: normal;
    margin: 0;
  }

  p {
    margin: 3px 0 0;
    opacity: 0.4;
  }
}

.number {
  @include fluid-type($breakpoint-sm, $breakpoint-lg, 50px, 90px);
  line-height: 1;
}

